[metadata]
name = pv_forecast
author = Gregor Roth
author_email = gregor.roth@web.de
description=photovoltaic, forecast, power, PV, weather, DWD, machine, learning
long_description = file: README.md
long_description_content_type=text/markdown

[options]
packages = pv_forecast
python_requires = >=3.8
install_requires =
    scikit-learn==1.1.2
    xmltodict==0.13.0
    appdirs==1.4.4

