[metadata]
name = pvpower
author = Gregor Roth
author_email = gregor.roth@web.de
description=photovoltaic, forecast, power, solar, PV, weather, DWD, machine learning, energy management
long_description = file: README.md
long_description_content_type=text/markdown

[options]
packages = pvpower
python_requires = >=3.8
install_requires =
    scikit-learn==1.1.2
    appdirs==1.4.4
    stream-unzip==0.0.70
    httpx==0.23.0
    pytz==2022.5

